--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -48,12 +48,40 @@
                             <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="..." /></figure>
+                        <figure class="mb-4">
+                            {% if post.head_image %}
+                                <img class="img-fluid rounded"
+                                     src="{{ post.head_image.url }}"
+                                     alt="{{ post.title }}>
+                            {% else %}
+                                <img class="card-fluid rounded"
+                                     src="https://picsum.photos/seed/{{ post.id }}/600/200"
+                                     alt="{{ post.title }}"
+                            {% endif %}
+                            </figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             <p>
                                 {{ post.content }}
                             </p>
+                            {% if post.file_upload %}
+                            <a href="{{ post.file_upload.url }}"
+                                type="button" class="btn btn-outline-secondary"
+                                role="button" download>
+                                Download
+                                {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                                <i class="fa-solid fa-file-excel"></i>
+                                {% elif post.get_file_ext == 'csv' %}
+                                <i class="fa-solid fa-file-csv"></i>
+                                {% elif post.get_file_ext == 'doc' or post.get_file_ext == 'docx' %}
+                                <i class="fa-solid fa-file-word"></i>
+                                {%else%}
+                                <i class="fa-solid fa-file"></i>
+                                {% endif %}
+
+                                {{ post.get_file_name }}
+                            </a>
+                            {% endif %}
                         </section>
                     </article>
                     <!-- Comments section-->
