--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -41,22 +41,24 @@
                         <header class="mb-4">
                             <!-- Post title-->
                             <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
+                            <h6 class="text-muted">{{ post.hook_text }}</h6>
                             <!-- Post meta content-->
                             <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} by 작성자 예정</div>
                             <!-- Post categories-->
                             <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
                             <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
+                            <hr/>
                         </header>
                         <!-- Preview image figure-->
                         <figure class="mb-4">
                             {% if post.head_image %}
                                 <img class="img-fluid rounded"
                                      src="{{ post.head_image.url }}"
-                                     alt="{{ post.title }}>
+                                     alt="{{ post.title }}">
                             {% else %}
-                                <img class="card-fluid rounded"
+                                <img class= "img-fluid rounded"
                                      src="https://picsum.photos/seed/{{ post.id }}/600/200"
-                                     alt="{{ post.title }}"
+                                     alt="{{ post.title }}">
                             {% endif %}
                             </figure>
                         <!-- Post content-->
