--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
 {% if post_list.exists %}
 <!-- Blog post-->
 {% for p in post_list %}
-<div class="card mb-4">
+<div class="card mb-4" id="post-{{ p.pk }}">
     {% if p.head_image %}
     <a href="{{ p.get_absolute_url }}">
         <img class="card-img-top"
@@ -13,11 +13,17 @@
              alt="{{ p }} head image"></a>
     {% else %}
     <a href="{{ p.get_absolute_url }}">
-        <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/600/200"
+        <img class="card-img-top"
+             src="https://picsum.photos/seed/{{ p.id }}/600/200"
              alt="{{ p }} head image"></a>
 
     {% endif %}
     <div class="card-body">
+        {% if p.category %}
+            <a class="badge bg-secondary float-end">{{ p.category }}</a>
+        {% else %}
+            <a class="badge bg-secondary float-end">미분류</a>
+        {% endif %}
         <h2 class="card-title h4">{{ p.title }}</h2>
         {% if p.hook_text %}
         <h6 class="text-muted">{{ p.hook_text }}</h6>
@@ -38,7 +44,7 @@
 
 <!-- Pagination-->
 <nav aria-label="Pagination">
-    <hr class="my-0" />
+    <hr class="my-0"/>
     <ul class="pagination justify-content-center my-4">
         <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"
                                           aria-disabled="true">◁</a></li>
