--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -36,9 +36,17 @@
         </figure>
         <!-- Post content-->
         <section class="mb-5">
-            <p>
-                {{ post.content }}
-            </p>
+            <p>{{ post.content }}</p>
+
+            {% if post.tags.exists %}
+                <i class="fas fa-tags"></i>
+                {% for tag in post.tags.all %}
+                    <a href="{{ tag.get_absolute_url }}" class="badge badge-light">{{ tag }}</a>
+                {% endfor %}
+                <br/>
+                <br/>
+            {% endif %}
+
             {% if post.file_upload %}
             <a href="{{ post.file_upload.url }}"
                type="button" class="btn btn-outline-secondary"
