--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -41,6 +41,16 @@
             <a href="#">{{ p.author | upper }}</a>
         </div>
         <p class="card-text">{{ p.content | truncatewords:20 }}</p>
+
+        {% if p.tags.exists %}
+            <i class="fas fa-tags"></i>
+            {% for tag in p.tags.iterator %}
+                <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
+            {% endfor %}
+            <br/>
+            <br/>
+        {% endif %}
+
         <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
     </div>
 </div>
