--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,10 @@
 <h1>
     Blog
     {% if category %}
-    <span class="badge rounded-pill bg-warning text-dark">{{ category }}</span>
+    <span class="badge badge-secondary">{{ category }}</span>
+    {% endif %}
+    {% if tag %}<span class="badge bg-dark"><<i class="fa-solid fa-tags"></i>
+    {{ tag }} ({{ tag.post_set.count }})</span>
     {% endif %}
 </h1>
 
