--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,13 +2,13 @@
 
 {% block main_area %}
 
-    {% if user.is_authenticated %}
-        {% if user.is_superuser or user.is_staff %}
-            <a class="btn btn-success btn-sm float-end" href="/blog/create_post/" type="button">
-                <i class="fas fa-pen"></i>&nbsp;&nbsp;New Post
-            </a>
-        {% endif %}
-    {% endif %}
+{% if user.is_authenticated %}
+{% if user.is_superuser or user.is_staff %}
+<a class="btn btn-success btn-sm float-end" href="/blog/create_post/" type="button">
+    <i class="fas fa-pen"></i>&nbsp;&nbsp;New Post
+</a>
+{% endif %}
+{% endif %}
 
 <h1>
     Blog
@@ -38,9 +38,9 @@
     {% endif %}
     <div class="card-body">
         {% if p.category %}
-            <a class="badge bg-secondary float-end">{{ p.category }}</a>
+        <a class="badge bg-secondary float-end">{{ p.category }}</a>
         {% else %}
-            <a class="badge bg-secondary float-end">미분류</a>
+        <a class="badge bg-secondary float-end">미분류</a>
         {% endif %}
         <h2 class="card-title h4">{{ p.title }}</h2>
         {% if p.hook_text %}
@@ -54,12 +54,12 @@
         <p class="card-text">{{ p.get_content_markdown | truncatewords_html:20 | safe }}</p>
 
         {% if p.tags.exists %}
-            <i class="fas fa-tags"></i>
-            {% for tag in p.tags.iterator %}
-                <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
-            {% endfor %}
-            <br/>
-            <br/>
+        <i class="fas fa-tags"></i>
+        {% for tag in p.tags.iterator %}
+        <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
+        {% endfor %}
+        <br/>
+        <br/>
         {% endif %}
 
         <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
@@ -71,13 +71,32 @@
 {% endif %}
 
 <!-- Pagination-->
+{% if is_paginated %}
 <nav aria-label="Pagination">
     <hr class="my-0"/>
     <ul class="pagination justify-content-center my-4">
-        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"
-                                          aria-disabled="true">◁</a></li>
-        <li class="page-item"><a class="page-link" href="#!">▷</a></li>
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link"
+               href="?page={{ page_obj.previous_page_number }}">Newer</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">Newer</a>
+        </li>
+        {% endif %}
+
+        {% if page_obj.has_next %}
+        <li class="page-item">
+            <a class="page-link"
+               href="?page={{ page_obj.next_page_number }}">Older</a>
+        </li>
+        {% else %}
+        <li class="page-itm disabled">
+            <a class="page-link" href="#">Older</a>
+        </li>
+        {% endif %}
     </ul>
 </nav>
-
+{% endif %}
 {% endblock %}
