--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,11 +12,17 @@
 
 <h1>
     Blog
-    {% if category %}
-    <span class="badge badge-secondary">{{ category }}</span>
+    {% if search_info %}
+    <small class="text-muted">{{ search_info }}</small>
     {% endif %}
-    {% if tag %}<span class="badge bg-dark"><<i class="fa-solid fa-tags"></i>
-    {{ tag }} ({{ tag.post_set.count }})</span>
+    {% if category %}
+    <span class="badge bg-secondary">{{ category }}</span>
+    {% endif %}
+    {% if tag %}
+    <span class="badge bg-dark">
+        <i class="fa-solid fa-tags"></i>
+    {{ tag }} ({{ tag.post_set.count }})
+    </span>
     {% endif %}
 </h1>
 
@@ -77,8 +83,7 @@
     <ul class="pagination justify-content-center my-4">
         {% if page_obj.has_previous %}
         <li class="page-item">
-            <a class="page-link"
-               href="?page={{ page_obj.previous_page_number }}">Newer</a>
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Newer</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -99,4 +104,5 @@
     </ul>
 </nav>
 {% endif %}
+
 {% endblock %}
