--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -1,18 +1,100 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>개발자 달타냥입니다!</title>
+    <title>개발자 정휘윤입니당</title>
+
+    <link rel="stylesheet" href="{% static 'blog/bootstrap5/css/bootstrap.min.css' %}" type="text/css">
+<!--    <link rel="stylesheet" href="{% static '/single_pages/css/landing.css' %}" type="text/css">-->
+
+    <script src="https://kit.fontawesome.com/55c17405f9.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav>
-    <a href="/blog/">Blog</a>
-    <a href="/about_me/">About me</a>
-</nav>
 
-<h1>안녕하세요. 달타냥입니다.</h1>
-<h2>이력</h2>
-<h2>Portfolio</h2>
-<h3>아직 공사중입니다.</h3>
+{% include 'blog/navbar.html' %}
+
+<section>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-lg-8">
+                <h1>안녕하세요. 정휘윤이에요.</h1>
+                <br/>
+                <p class="lead">
+                    코딩과 운동을 좋아합니다.<br/>
+                    동아대학교에서 데이터 사이언스 과정을 배우고 있습니다.
+                </p>
+
+                <ul>
+                    <li>WORK EXPERIENCE</li>
+                    <ul>
+                        <li>동아대학교 환경보건센터(2021.07)</li>
+                        <li>부산광역시청 첨단의료산업과(2022.03~2022.06)</li>
+                    </ul>
+                    <li>EDUCATION</li>
+                    <li>건강관리학과, 동아대학교(2016.02~)</LI>
+                    <li>디지털스마트부산 아카데미(2022.07~)</li>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-fluid" src="{% static 'single_pages\images\IU.jpg' %}">
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="bg-light margin-for-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1>PORTFOLIO</h1>
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#pycon2022">
+                    <img class="card-img-top" src="{% static 'single_pages/images/cat.jpg' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">고양이는 귀여워 [PYCON2022]</h5>
+                        <p>행동도 귀여웠으면,,</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#inflearn_django2">
+                    <img class="card-img-top" src="{% static 'single_pages/images/dog.jpg' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">댕댕이가 최고야</h5>
+                        <p>나랑 산책갈래?</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#automation_python">
+                    <img class="card-img-top" src="{% static 'single_pages/images/Tomboy.jpg' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">여자아이들</h5>
+                        <p>Look at you 넌 못 감당해 날</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<div class="fixed-bottom">
+    {% include 'blog/footer.html' %}
+</div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
