--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html lang="ko">
+{% load static %}
 <head>
     <meta charset="UTF-8">
-    <title>달타냥입니다!</title>
+    <title>정휘윤이에요</title>
+    <link rel="stylesheet" href="{% static 'blog/bootstrap5/css/bootstrap.min.css' %}" type="text/css">
+    <script src="https://kit.fontawesome.com/55c17405f9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static '/single_pages/css/landing.css' %}" type="text/css">
 </head>
 <body>
-<nav>
-    <a href="/blog/">Blog</a>
-    <a href="/about_me/">About me</a>
-</nav>
+{% include 'blog/navbar.html' %}
+<section>
+    <div class="container">
+        <div class="row justify-content-between mt-5">
+            <div class="col-lg-6 text-light">
+                <h1>디지털스마트부산 아카데미</h1>
+                <br>
+                <p>동아대학교 교육생 정휘윤</p>
+                <p>나의 블로그다.</p>
+                <p>( •̀ ω •́ )y</p>
+            </div>
+            <div class="col-lg-5 mt-1">
+                <h2 class="text-light">Blog - Recent posts</h2>
+                {% for post in recent_posts %}
+                <div class="card mt-1">
+                    <div class="card-body">
+                        <h6><a href="{{ post.get_absolute_url }}" class="text-decoration-none text-black">{{ post.title }}</a> </h6>
+                          <span class="badge rounded-pill bg-light text-black float-end">
+                              <img class="mr-1 rounded-circle" width="20px" src="{{ post.get_avatar_url }}" alt="{{ post.author }}">
+                            {{ post.author.username }}
+                            &nbsp;&nbsp;
+                            {{ post.created_at }}
+                        </span>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</section>
 
-<h1>안녕하세요. 달타냥입니다.</h1>
-<h2>대문페이지</h2>
-<h3>아직 만들지 않음</h3>
+<div class="fixed-bottom">
+    {% include 'blog/footer.html' %}
+</div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
